netlify cms responsive

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -12,9 +12,66 @@
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </body>
   <style>
+    .css-1qcpzq-LoginButton-button-default-gray-disabled{
+      margin-top: 100px;
+    }
+
     @media (max-width: 799px) {
+      /*Sonradan*/
+      .css-1ix3pzw-PreviewPaneContainer-ControlPaneContainer{
+        padding: 5px;
+      }
+      .css-1gj57a0-SidebarContainer-card{
+        z-index: 500;
+      }
+      .css-1acatj1-ToolbarSectionMeta-toolbarSection evqrzhe6{
+        height: 0px;
+      }
+      .css-16b5p1f-ToolbarSectionMain-toolbarSection evqrzhe2{
+        padding: 0px;
+      }
+      .css-12yqrwa-AppHeaderNavLink-AppHeaderButton-button-buttonActive-buttonActive-buttonActive-buttonActive-AppHeaderButton{
+        font-size: 0px;
+
+      }
+      .css-104dqk8-AppHeaderButton-button-buttonActive-buttonActive-buttonActive-buttonActive-AppHeaderButton{
+        font-size: 0px;
+      }
+      .css-abwcjt-ToolbarSectionBackLink-toolbarSection{
+        padding: 0px 10px;
+      }
+      .css-2oej7z-ToolbarContainer{
+
+      }
+      .css-abwcjt-ToolbarSectionBackLink-toolbarSection{
+        display: block;
+        text-align: center;
+      }
+      .css-1fi2uoj-ToolbarButton-button-default-buttonMargin-noOverflow-SaveButton-lightBlue{
+        margin: 0px;
+      }
+      css-1ixjrmh-ToolbarButton-button-default-buttonMargin-noOverflow-DeleteButton-lightRed evqrzhe14{
+        margin: 0px 5px;
+      }
+      .css-1u4rgvb-AvatarDropdownButton{
+        padding: 0px;
+      }
+      .css-15yst2y-IconWrapper-AvatarPlaceholderIcon-avatarImage{
+        width: 0px;
+      }
+      .css-1gj57a0-SidebarContainer-card{
+        width: 100%;
+        margin-bottom: 50px;
+        position: inherit;
+      }
+      .css-1acatj1-ToolbarSectionMeta-toolbarSection{
+        padding: 0px;
+      }
+      .css-1ixjrmh-ToolbarButton-button-default-buttonMargin-noOverflow-DeleteButton-lightRed{
+        margin-left: 10px;
+        margin-right: 0px;
+      }
 .css-u4olba-SidebarContainer-card {
-  position: static;
   width: 100%;
   margin-bottom: 30px;
 }
@@ -91,7 +148,7 @@
   padding-top: 100px;
 }
 .css-2oej7z-ToolbarContainer {
-  height: 100px;
+  height: 120px;
   width: 100%;
   min-width: 0;
 }
