--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -15,7 +15,9 @@
     .css-1qcpzq-LoginButton-button-default-gray-disabled{
       margin-top: 100px;
     }
-
+    .css-1f3mf5k-StyledModal{
+        padding: 10px;
+      }
     @media (max-width: 799px) {
       /*Sonradan*/
       .css-1ix3pzw-PreviewPaneContainer-ControlPaneContainer{
@@ -71,6 +73,16 @@
         margin-left: 10px;
         margin-right: 0px;
       }
+      .css-hn3jn7-EditorContainer{
+        position: inherit;
+      }
+      .css-2oej7z-ToolbarContainer{
+        position: absolute;
+      }
+      .css-y7r3-AppHeader{
+        position: inherit;
+      }
+
 .css-u4olba-SidebarContainer-card {
   width: 100%;
   margin-bottom: 30px;
