netlify cms ye geçiş

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -10,6 +10,10 @@
   <body>
     <!-- Include the script that builds the page and powers Netlify CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+    <script>
+      CMS.registerPreviewStyle("styles.css");
+      CMS.registerPreviewStyle("bootstrap.min.css");
+    </script>
   </body>
   <style>
     .css-1qcpzq-LoginButton-button-default-gray-disabled{
