--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Markut İçerik Yönetimi</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png">
     <!-- Include the script that enables Netlify Identity on this page. -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
