Update Dergi “2020-09-iskandinav-tasarımı”

--- a/content/dergi/2020-09-iskandinav-tasarımı.html
+++ b/content/dergi/2020-09-iskandinav-tasarımı.html
@@ -6,8 +6,7 @@ yazar:
   - Elif Ersoz
 tags:
   - iskandinav
-sayfa:
-  - "00"
+sayfa: 0
 type: sayfa
 ---
 https://www.notion.so/skandinav-Tasar-m-na-Bak-511ac4bc5b9d4a51bcb54d55742ef576
