Update Dergi “2020-09-uzaktan-tasarım-eğitimi-hakkında-röportaj”

--- a/content/dergi/2020-09-uzaktan-tasarım-eğitimi-hakkında-röportaj.html
+++ b/content/dergi/2020-09-uzaktan-tasarım-eğitimi-hakkında-röportaj.html
@@ -11,6 +11,25 @@ sayi:
 sayfa: 0
 type: sayfa
 ---
++++
+title = "Uzaktan Tasarım Eğitimi Hakkında Röportaj"
+url = "sayi-2/roportaj/"
+date = "2020-09-15"
+seotitle = "Dijitalleşmenin Kullanıcı Deneyimi Üzerindeki Etkisi"
+description="Fizikselden dijitale geçişle birlikte kullanıcı deneyiminin (ux) üzerindeki etkileri. Kullanıcı deneyimi sağlama unsurları nelerdir? Kullanıcı Deneyimi algıları neler?"
+aciklama="Dijital teknolojideki sürekli gelişimin hayatımızın her alanına nüfuz ettiğini her gün daha net görüyoruz. Gündelik yaşantımızı, kullandığımız tüm bu makineler, ürünler ve sistemler olmadan hayal edebilmek artık mümkün değil."
+thumb="/img/dijitale-yolculuk-thumbnail.jpg"
+sayi=[
+"2"
+]
+sayfa="05"
+yazar=["Markut"]
+type="sayfa"
+tags= [
+"anasayfa"
+]
+draft= true
++++
 <div class="container">
     <p class="mt-5">Uzaktan tasarım eğitimi hakkında hocalarımıza soruları yönelttik. Cevaplar bizim için çok değerli, sizler için de öyle olacağını umuyoruz. Hocalarımızın geleneksel tasarım yöntemleriyle çalıştıklarını ve bu alanda uzmanlaştıklarını bilmeniz de faydalı olacaktır.</p>
     <div class="row">
@@ -54,7 +73,7 @@ type: sayfa
             <p>Zor! Yüz yüze olduğundaki avantajlar, aynı mekan, masa, kağıt kalem kullanmak ve anlık feedback (geri bildirim) vermek, öğrencilerle bütünleşme, sinerji gibi unsurların eksikliği, verimliliği düşüreceğini söyleyebiliriz. Dünya genelinde yürütülen uzaktan eğitimlerin arasında, çizim ve sanal-teknik konularında programlar bulunuyor; nitekim “uzaktan product design” ile ilgili programlara henüz rastlamadım? Ürün tasarımı, elleyerek, dokunarak, deneyerek, karşılıklı alışverişler ile yürüyen bir daldır. Çizim materyalleri, yalnızca bilgisayar ortamının sağladığı imkanları içermez. Uygulama da gerektiren bir dal olması sebebi ile, uzaktan eğitimin öncekine (örgüne) oranla verimli yapılamayacağını düşünüyorum.</p>
         </div>
     </div>
-    <h3>2. Uzaktan eğitim hakkında ne düşünüyorsunuz? Sizce uzaktan tasarım eğitimi yapılabilir mi?</h3>
+    <h3>3. Soru Bu pandemi döneminde sizce uzaktan tasarım eğitiminin ideali ne olmalı?</h3>
     <div class="row">
         <div class="col-md-4 bg-grey">
             <p>Uzaktan tasarım eğitiminin ideali ne olmalıdır? sorusunun cevabı şu aşamada verilemez diye düşünüyorum. Uzun yıllar üzerinde çalışılması gereken bir konu. Pandemi sürecinde her eğitmen, her sınıf için o anlık koşullar ne gerektiriyorsa en iyisini yapmaya çalıştı. Özellikle uygulama ağırlıklı bir yapıya sahip tasarım eğitimindeki proje dersleri, bu gün kullanmış olduğumuz uzaktan eğitim sistemi ile çözülemeyecek gibi görünmesine rağmen eğitmenlerin üstün gayreti ile belli bir seviyeye getirilmiştir. <br> Diğer taraftan uzaktan eğitimin en büyük problemlerden bir tanesi, yeteri kadar öğrenme isteği ve disiplini olmayan öğrencilere olumsuz bir özgürlük alanı sunmasıdır. Eğitimin zaman planı ve aşamaları gibi yapısal özellikler, bire bir eğitmenin kontrolünde olmadığında bu durum, öğrenci tarafından verimsiz yönlere çekilebilmektedir.</p>
@@ -81,7 +100,7 @@ type: sayfa
     <h3>5. Yüz yüze eğitimlerimizi aktif bir şekilde yapıyoruz. Uzaktan eğitimde öğrencilerden ders içi çalışma beklentileriniz nasıl olacak?</h3>
     <div class="row">
         <div class="col-md-4 bg-grey">
-            <p>Tasarım eğitimindeki dersler diğer disiplinlerden farklı olarak, öğrenciler ve eğitmenler arasında yüz yüze iletişim ve etkileşim ile yapılmaktadır. Endüstri Tasarımı dersleri ve ders içeriklerine bakıldığında, tamamen uzaktan tasarım eğitimi verilmesi hem eğitmen hem de öğrenci açısından yeterli niteliğe ulaşma konusunda endişe duymamızı sağlıyor. <br> Uzaktan eğitimin en büyük problemlerden bir tanesi de, yeteri kadar öğrenme isteği ve disiplini olmayan öğrencilere olumsuz bir özgürlük alanı sunmasıdır. Eğitimin zaman planı ve aşamaları gibi yapısal özellikler, bire bir eğitmenin kontrolünde olmadığında, bu durum öğrenci tarafından verimsiz yönlere çekilebilmektedir. İlk defa karşılaştığımız bu tür ve buna benzer farklı olumsuzlukların cevabını hep birlikte bulabileceğimiz bir sürece giriyoruz diye düşünüyorum.</p>
+            <p>Tasarım eğitimindeki dersler diğer disiplinlerden farklı olarak, öğrenciler ve eğitmenler arasında yüz yüze iletişim ve etkileşim ile yapılmaktadır. Endüstri Tasarımı dersleri ve ders içeriklerine bakıldığında, tamamen uzaktan tasarım eğitimi verilmesi hem eğitmen hem de öğrenci açısından yeterli niteliğe ulaşma konusunda endişe duymamızı sağlıyor. <br> Eğitimin zaman planı ve aşamaları gibi yapısal özellikler, bire bir eğitmenin kontrolünde olmadığında, bu durum öğrenci tarafından verimsiz yönlere çekilebilmektedir. İlk defa karşılaştığımız bu tür ve buna benzer farklı olumsuzlukların cevabını hep birlikte bulabileceğimiz bir sürece giriyoruz diye düşünüyorum.</p>
         </div>
         <div class="col-md-4 bg-green">
             <p>Önümüzdeki eğitim dönemi için uzaktan eğitime hazırlanıyoruz ancak bunun kalıcı olmamasını temenni ediyorum. Bununla birlikte bu dönemi karşılıklı katılım ve bireysel çalışmalara ağırlık vererek, belki yüz yüze yapılan eğitimdekinden de fazla çalışarak, bireysel sorumluluğu öğrencinin kendisinin hissetmesini bekleyebilirim.</p>
@@ -112,6 +131,6 @@ type: sayfa
         </div>
         <div class="col-md-4 bg-yellow">
             <p>Salgının yarattığı eğitim koşulları sebebi ile verimliliğin yüksek olamayacağı gerçeğini de düşünerek başka kararlar düşünülebilir. Kişilere aittir. Diğer önerilerim, üstteki sorularda bulunuyor.</p>
-       </div>
+        </div>
     </div>
 </div>
