Update Dergi “2020-09-uzaktan-tasarım-eğitimi-hakkında-röportaj”

--- a/content/dergi/2020-09-uzaktan-tasarım-eğitimi-hakkında-röportaj.html
+++ b/content/dergi/2020-09-uzaktan-tasarım-eğitimi-hakkında-röportaj.html
@@ -25,7 +25,7 @@ type: sayfa
              <p>Marmara Üniversitesi</p>
         </div>
         <div class="col-md-4 bg-yellow">
-            <h3>Sevim Zeynep Bingel</h3>
+            <h3>Zeynep k. Bingel</h3>
             <p>Dr. Öğr. Üyesi</p>
             <p>Marmara Üniversitesi</p>  
         </div>
