--- a/content/dergi/sayi-2-iskandinav-tasarimina-bakis.html
+++ b/content/dergi/sayi-2-iskandinav-tasarimina-bakis.html
@@ -288,7 +288,7 @@ tags= [
         Model 3107’yi tasarladı. Her ikisi de modern ihtiyaçları mükemmel
         şekilde karşıladı, hafif, kompakt ve kolayca istiflenebilir
         sandalyelerdi. 1956 yılında tasarladığı SAS Royal Hotel için diğer iki
-        başarılı sandalye tasarımı olan Egg and the Swan’ı tasarladı.
+        başarılı sandalye tasarımı olan Egg ve Swan Chair’ı tasarladı.
       </p>
     </div>
     <div class="col-md-4">
