ana sayfa ve dergi etiketleri, ufak css, endüstiryel

--- a/content/dergi/sayi-0-ikoniksandalyeler.html
+++ b/content/dergi/sayi-0-ikoniksandalyeler.html
@@ -11,12 +11,12 @@ sayi=["0"]
 sayfa="06"
 yazar=["Zeynep Dag"]
 tags= [
-    "anasayfa", "ikonik"
+    "anasayfa", "ikonik", "dergi"
 ]
 +++
 <a href="/sayi-0/markut-etiketle/" id="next"></a>
 <div class="container">
-<h1>12 İkonik Sandalye</h1>
+<h2>12 İkonik Sandalye</h2>
 <div class="row">
     <div class="col-md-6">
         <h3>X-Chair</h3>
