--- a/content/dergi/sayi-1-dijitalleşmenin-kullanıcı-deneyimi.html
+++ b/content/dergi/sayi-1-dijitalleşmenin-kullanıcı-deneyimi.html
@@ -13,7 +13,7 @@ sayfa="05"
 yazar=["Merve Cetin"]
 type="sayfa"
 tags= [
-"anasayfa"
+"dergi"
 ]
 +++
 <a href="/sayi-1/tasarimda-kompozisyon-nedir/" id="next"></a>
