--- a/content/dergi/sayi-1-ikonik-kahve-makineleri.html
+++ b/content/dergi/sayi-1-ikonik-kahve-makineleri.html
@@ -9,6 +9,7 @@ thumb: /img/coffee-machine-thumbnail.jpg
 tags:
   - anasayfa
   - ikonik
+  - dergi
 aciklama: Kahvelerinizi hazırlayın ve okumaya başlayın… 1972'de Florian Seiffert
   tarafından (Dieter Rams'ın rehberliğinde) Almanya’ da tasarlanmıştır. Braun
   için tasarlanan KF 20 Aromaster, kaynar suyu bir kahve filtresinden geçirmek
