--- a/content/dergi/sayi-1-otomobillerin-hayatımızdaki-yeri.html
+++ b/content/dergi/sayi-1-otomobillerin-hayatımızdaki-yeri.html
@@ -12,8 +12,7 @@ sayi=[
 sayfa="07"
 yazar=["Omer Faruk Cam"]
 type="sayfa"
-tags= ["anasayfa"
-]
+tags= ["dergi"]
 +++
 <a href="/sayi-1/yorumlar/" id="next"></a>
 
