--- a/content/dergi/sayi-1-rayların-üzerinde-raymond-loewy.html
+++ b/content/dergi/sayi-1-rayların-üzerinde-raymond-loewy.html
@@ -8,6 +8,7 @@ thumb: /img/loewy-lokomotif-thumbnail.jpg
 tags:
   - anasayfa
   - Raymond Loewy
+  - dergi
 aciklama: 5 Kasım 1893’de Paris’te doğan Raymond Loewy, Amerika’da ürettiği
   eserleri sayesinde Amerikalı tasarımcı olarak tanınmıştır. Tasarım anlayışında
   fonksiyon ön plandadır, form ve biçim daha sade ve geri plandadır.
