--- a/content/dergi/sayi-1-sürdürülebilir-ambalaj.html
+++ b/content/dergi/sayi-1-sürdürülebilir-ambalaj.html
@@ -13,12 +13,12 @@ sayfa="03"
 yazar=["Ece Celik"]
 type="sayfa"
 tags= [
-"anasayfa", "ekoloji", "surdurulebilir tasarim", "ambalaj tasarimi"
+"ekoloji", "surdurulebilir tasarim", "ambalaj tasarimi", "dergi"
 ]
 +++
 <a href="/sayi-1/raymond-loewy/" id="next"></a>
 <div class="container">
-    <h1>Sürdürülebilirlik</h1>
+    <h2>Sürdürülebilirlik</h2>
     <div class="row">
          <div class="col-md-6">
              <p>Dünya üzerinde varlığını sürdüren iki farklı sistemden bahsedilmektedir. Bunlardan ilki, canlı yaşamının
