--- a/content/dergi/sayi-2-biyomimikri.html
+++ b/content/dergi/sayi-2-biyomimikri.html
@@ -13,7 +13,7 @@ sayfa="04"
 yazar=["Hilal Doruk"]
 type="sayfa"
 tags= [
-"anasayfa", "biyomimikri" 
+"anasayfa", "biyomimikri", "dergi"
 ]
 +++
 <a href="/sayi-2/ikonik-masa-lambasi-tasarimlari/" id="next"></a>
