--- a/content/dergi/sayi-2-ikonik-masa-lamba.html
+++ b/content/dergi/sayi-2-ikonik-masa-lamba.html
@@ -13,7 +13,7 @@ sayfa="05"
 yazar=["Merve Cetin", "Eylul Ecem Sogutlu"]
 type="sayfa"
 tags= [
-"anasayfa", "biyomimikri" 
+"anasayfa", "biyomimikri", "dergi"
 ]
 +++
 <a href="/sayi-2/tasarimda-tipografi-nedir/" id="next"></a>
