--- a/content/dergi/sayi-2-mutfak-endustriyel-tasarim.html
+++ b/content/dergi/sayi-2-mutfak-endustriyel-tasarim.html
@@ -1,6 +1,6 @@
 +++
 title = "Endüstriyel Tasarım Mutfağa Giriyor!"
-url = "sayi-2/endustiryel-tasarim-mutfaga-giriyor/"
+url = "sayi-2/endustriyel-tasarim-mutfaga-giriyor/"
 date = "2020-10-01"
 seotitle = "Endüstriyel Tasarım Mutfağa Giriyor!"
 description="Buzdolapların mutfağa girişi ve endüstriyel tasarımdaki tarihi. 1920’lerin başında endüstriyel buzdolapları görülmeye başlandı. Monitör Üstü Buzdolabı."
@@ -13,7 +13,7 @@ sayfa="03"
 yazar=["Zeynep Yarar"]
 type="sayfa"
 tags= [
-"anasayfa"
+"anasayfa", "dergi"
 ]
 +++
 <a href="/sayi-2/biyomimikri-nedir-tasarimda-dogadan-yararlanmak/" id="next"></a>
@@ -333,9 +333,7 @@ tags= [
     olarak fütüristik ve aerodinamik bir kasaya sahip olan ilk buzdolabına
     dönüştü. Sears’ı sektörde lider konumuna yükselten Loewy kariyerinin ilk
     büyük adımlarını atmaya başlıyordu.
-    <a href="https://www.markut.net/sayi-1/raymond-loewy/"
-      >(bkz. Rayların Üzerinde Raymond Loewy)</a
-    >
+    <a href="https://www.markut.net/sayi-1/raymond-loewy/">(bkz. Rayların Üzerinde Raymond Loewy)</a>
   </p>
   <div class="row mt-5">
     <div class="col-md-6">
