--- a/content/dergi/sayi-0-donal-dnorman.html
+++ b/content/dergi/sayi-0-donal-dnorman.html
@@ -14,15 +14,14 @@ yazar=[
     "Hilal Doruk"
     ]
 tags= [
-  "anasayfa",
   "tasarim ilkeleri",
-  "Donald Norman"
+  "Donald Norman",
+  "dergi"
 ]
 +++
 <a href="/sayi-0/tasarim-sozlugu-ikon/" id="next"></a>
 <img class="img-fluid" src="/img/Zachary_Monteiro_Don_Norman_UX.jpg" alt="">
 <div class="container">
-<h1>Donald Norman ve Tasarım İlkeleri</h1>
 <div class="row">
     <div class="col-md-8 ">
         <p>Donald A. Norman, şirketlere insan merkezli tasarım yapabilmeleri için danışmanlık hizmeti veren Nielsen Norman Group’ un kurucu ortağıdır. Bilişsel bilim, bilgisayar bilimi ve psikoloji departmanlarında profesörlük geçmişi bulunmaktadır. Apple şirketinin araştırma laboratuvarı olan Apple İleri Teknoloji Grubu’nun başkan yardımcılığını yapmıştır. Tasarımcının başucu kitabı niteliğinde olan “Gündelik Şeylerin Tasarımı” kitabında araştırmaları doğrultusunda bu evrensel tasarım ilkelerini telefonlar, kapılar, termostatlar, ocaklar, buzdolapları gibi gündelik eşyalar üzerinden inceler.</p>
