--- a/content/dergi/sayi-0-ekoloji.html
+++ b/content/dergi/sayi-0-ekoloji.html
@@ -11,13 +11,13 @@ sayi=["0"]
 sayfa="05"
 yazar=["Ece Celik"]
 tags= [
-"anasayfa", "ekoloji", "surdurulebilir tasarim"
+"ekoloji", "surdurulebilir tasarim", "dergi"
 ]
 +++
 <a href="/sayi-0/ikonik-tasarimlar-sandalye/" id="next"></a>
 <img class="img-fluid" src="/img/peel-saver-packaging.jpg" alt="">
 <div class="container">
-<h1>Ekoloji nedir, neden önemlidir?</h1>
+<h2>Ekoloji nedir, neden önemlidir?</h2>
 <div class="row">
     <div class="col-md-6"><p>
     1870 yılında ilk olarak Alman biyolog Ernst Haeckel, çalışmalarında “ekoloji” kavramını kullanmıştır. 1930’lu yıllara kadar bilimsel bir statü kazanamayan bu kavram, canlıların birbirleri ve çevreleri arasındaki etkileşimlerini incelemektedir. Ekoloji kavramı, Yunanca kökenli “ev” (oikos) ve “anlama” (logos) sözcüklerinden türeyerek, “gezegenimizi anlamamıza aracılık eden” anlamına gelmektedir (Porritt 1986). 
