--- a/content/dergi/sayi-0-giris.html
+++ b/content/dergi/sayi-0-giris.html
@@ -14,7 +14,7 @@ tags= [
 ]
 +++
 <a href="/sayi-0/markut-ekibi/" id="next"></a>
-<div class="container mgen"><h1>Giriş</h1><p>
+<div class="container mgen"><p>
  Bauhausla birlikte modern tasarım anlayışının temelleri atılıp, süsleme yanlış bulunularak yapılardan söz edilmeye başlanmıştır. Ancak bu temelde doğru sayılsa bile bir yaratım yalnız geometri yahut süsleme değildir. Bu noktada esas kaynak olan doğaya inerek gözlemlerimizi artırarak nihai hedefimize ulaşmış olacağız.
 
 Görüneni iki veya üç boyutlu aktarmak bir hedef değil. Ancak formun neden biçim aldığını ve biçim alışındaki etmenleri analiz ederek bir sonraki aşamaya geçebiliriz. Bu hususta ana unsurumuz olan temel geometrik formlar, yaptığımız işlemi gerçekleştirmede birer araç olarak ele alınacak; geleneksel yöntemlerle çalışırken teknolojik olanaklardan maksimum doğrultuda yararlanılarak ilerlenecektir. 
