--- a/content/dergi/sayi-0-tasarimsozlugu.html
+++ b/content/dergi/sayi-0-tasarimsozlugu.html
@@ -11,13 +11,13 @@ sayi=["0"]
 sayfa="04"
 yazar=["Goksu Gokturk", "Zeynep Yarar", "Elif Ersoz"]
 tags= [
-  "anasayfa", "tasarim sozlugu", "ikonik"
+ "tasarim sozlugu", "ikonik", "dergi"
 ]
 +++
 <a href="/sayi-0/ekoloji-nedir-surdurulebilir-tasarim/" id="next"></a>
 <div class="container">
 <h2>Tasarım Sözlüğünde Ayın Kelimesi:</h2>
-<h1>İkon</h1>
+<h2>İkon</h2>
     <div class="row">
         <div class="col-md-4">
         İKON, ya da İKONA (ing. İcon). Ortodoks kilise sanatında Hz. İsa, Meryem ya da azizleri betimleyen resim.  6.yy’da ortaya çıkmıştır. Önceleri Bizans'a özgü olan ikon, Ortodoks’lukla birlikte Balkanlar ve Rusya’da da yaygın bir kullanım ve uygulama alanı bulmuştur. Genellikle, ahşap ve levhalar üzerine ankostik boya ile yapılırdı. İkonaların kutsal kabul edilmesi ve sanatsal bir özellik taşıma gerekliliği olmaması onları diğer resimlerden ayıran en önemli farktır. İkonalar sıradan, realizmden uzak, yaşadığımız dünya ile ilgili olmayan yönlerin ortaya çıkarıldığı, sanatsal açının önemli değil ruhsallığın ön plana çıktığı sembolik tasvirlerdir.
