--- a/content/dergi/sayi-1-tasarımda-kompozisyon.html
+++ b/content/dergi/sayi-1-tasarımda-kompozisyon.html
@@ -13,7 +13,7 @@ sayfa="06"
 yazar=["Goksu Gokturk", "Atahan Gokturk"]
 type="sayfa"
 tags= [
-"anasayfa", "tasarim sozlugu" 
+"anasayfa", "tasarim sozlugu", "dergi" 
 ]
 +++
 <a href="/sayi-1/otomobillerin-hayatimizdaki-yeri/" id="next"></a>
