--- a/content/dergi/sayi-2-iskandinav-tasarimina-bakis.html
+++ b/content/dergi/sayi-2-iskandinav-tasarimina-bakis.html
@@ -13,7 +13,7 @@ sayfa="01"
 yazar=["Elif Ersoz"]
 type="sayfa"
 tags= [
-"anasayfa", "iskandinav tasarimi" 
+"anasayfa", "iskandinav tasarimi", "dergi"
 ]
 +++
 <a href="/sayi-2/uzaktan-tasarim-egitimi-roportaj/" id="next"></a>
