--- a/content/dergi/sayi-2-tipografi-tasarim-sozlugu.html
+++ b/content/dergi/sayi-2-tipografi-tasarim-sozlugu.html
@@ -13,7 +13,7 @@ sayfa="06"
 yazar=["Goksu Gokturk"]
 type="sayfa"
 tags= [
-"anasayfa"
+"anasayfa", "dergi"
 ]
 +++
 <a href="/sayi-2/yorumlar/" id="next"></a>
