--- a/content/dergi/sayi-2-uzaktan-tasarim-egitimi-roportaj.html
+++ b/content/dergi/sayi-2-uzaktan-tasarim-egitimi-roportaj.html
@@ -5,7 +5,7 @@ date = "2020-10-01"
 seotitle = "Uzaktan Tasarım Eğitimi Hakkında Röportaj"
 description="Uzaktan tasarım eğitimi hakkında hocalarımıza soruları yönelttik. Cevaplar bizim için çok değerli, sizler için de öyle olacağını umuyoruz."
 aciklama="Uzaktan tasarım eğitimi hakkında hocalarımıza soruları yönelttik. Cevaplar bizim için çok değerli, sizler için de öyle olacağını umuyoruz."
-thumb="/img/dijitale-yolculuk-thumbnail.jpg"
+thumb="/img/uzaktan-tasarim-egitimi-roportaj.jpg"
 sayi=[
 "2"
 ]
@@ -13,10 +13,10 @@ sayfa="02"
 yazar=["Markut"]
 type="sayfa"
 tags= [
-"anasayfa", "roportaj"
+"anasayfa", "roportaj", "dergi"
 ]
 +++
-<a href="/sayi-2/endustiryel-tasarim-mutfaga-giriyor/" id="next"></a>
+<a href="/sayi-2/endustriyel-tasarim-mutfaga-giriyor/" id="next"></a>
 <div class="container">
     <p class="mt-5">Uzaktan tasarım eğitimi hakkında hocalarımıza soruları yönelttik. Cevaplar bizim için çok değerli, sizler için de öyle olacağını umuyoruz. Hocalarımızın geleneksel tasarım yöntemleriyle çalıştıklarını ve bu alanda uzmanlaştıklarını bilmeniz de faydalı olacaktır.</p>
     <div class="row">
