--- a/content/dergi/sayi-3-moodboard.html
+++ b/content/dergi/sayi-3-moodboard.html
@@ -5,7 +5,7 @@ date = "2020-11-01"
 seotitle = "Tasarımda Moodboard Nedir?"
 description="Moodboard, (mood+board) kelimelerinden oluşup Türkçe karşılığı, ruh hali, duygu durumu + pano olarak çevrilir. Endüstriyel tasarımda moodboard nasıl oluşturulur?"
 aciklama="Moodboard, tasarım sürecinde ilham almak için kullanılan, üzerine resim veya yazı gibi bir çok materyalin yerleştirildiği, konuyu daha iyi kavramak ve görsel bir dil oluşturmak adına yapılan panolardır."
-thumb="/img/"
+thumb="/img/moodboard-markut.jpg"
 sayi=[
 "3"
 ]
