--- a/content/dergi/sayi-3-ikonik-kettle.html
+++ b/content/dergi/sayi-3-ikonik-kettle.html
@@ -24,10 +24,7 @@ tags= [
       >Okullar açıldı(!) uzaktan eğitim başladı. Markut, Marmara Üniversitesi
       Endüstriyel Tasarım öğrencileri olan bizlere, proje konularımız verildi;
       Çay ve Kahve makineleri. Ne güzel tesadüf ki kahve makinelerine de
-      1.sayımızda yer vermiştik. (bkz.
-      <a href="https://www.markut.net/sayi-1/ikonik-kahve-makinesi-tasarimlari/"
-        >İkonik Tasarımlar Kahve Makineleri</a
-      >) Proje dersimize de yardımcı olacak şekilde bu sayıda çaydanlık ve su
+      1.sayımızda yer vermiştik. (bkz. <a href="https://www.markut.net/sayi-1/ikonik-kahve-makinesi-tasarimlari/">İkonik Tasarımlar Kahve Makineleri</a>) Proje dersimize de yardımcı olacak şekilde bu sayıda çaydanlık ve su
       ısıtıcıları üzerine, ikonik ve ilgi çekici formlara sahip bazı
       tasarımlardan bahsettim. Keyifli Okumalar :)</em
     >
