--- a/content/dergi/sayi-3-kitchenaid.html
+++ b/content/dergi/sayi-3-kitchenaid.html
@@ -155,9 +155,7 @@ tags= [
       <p>
         1927&#39;de krom kaplı küresel masa lambası da dahil olmak üzere bir
         dizi lamba tasarımı ve üretimi üzerinde çalıştı. (ayrıca bkz.
-        <a href="https://www.markut.net/sayi-2/ikonik-masa-lambasi-tasarimlari/"
-          >İkonik Masa Lambası Tasarımları)</a
-        >
+        <a href="https://www.markut.net/sayi-2/ikonik-masa-lambasi-tasarimlari/">İkonik Masa Lambası Tasarımları)</a>
       </p>
       <p>
         1929&#39;da Calkins &amp; Holden&#39;da reklam müdürü oldu ve
