--- a/content/dergi/sayi-3-bauhaus-ekolu.html
+++ b/content/dergi/sayi-3-bauhaus-ekolu.html
@@ -293,7 +293,7 @@ tags= [
     <p>
       Cumhuriyet’in kuruluşu ile birlikte, Sanayi-i Nefise Mektebi önemli bir
       rol üstlenmiştir. Bu eski kurum, Cumhuriyetin kuruluşu ertesinde, İstanbul
-      Devlet Güzel Sanatlar Akademisi (İDGSA) -bugünkü Marmara GSF- olmuştur.
+      Devlet Güzel Sanatlar Akademisi (İDGSA) olmuştur.
       Kurumda yetişen Seyfi Arkan, Fazıl Aysu, Nazimî Yaver Yenal, Sadun Ersin,
       Muhlis Türkmen vb pek çok tasarımcı, çağdaş Türkiye’nin yeni yapılanma
       sürecinde evlerde ve kamu mekânlarında (TBMM, Florya Deniz Köşkü vb)
