recaptcha, geçiş hızlandırma, char > chair

--- a/content/dergi/sayi-0-ikoniksandalyeler.html
+++ b/content/dergi/sayi-0-ikoniksandalyeler.html
@@ -83,7 +83,7 @@ tags= [
         <h3>Egg Chair</h3>
         <img class="img-fluid" src="/img/arne-jacobsen-egg-chair.jpg" alt="">
        <p>
-       Arne Jacobsen, Egg Char i 1958 yılında Kopenhag'daki SAS Royal Hotel'in lobi ve resepsiyon alanları için tasarladı. Otel binasının mobilya da dahil olmak üzere her unsurunu tasarladı. Egg chair, Jacobsen’ın tüm tasarımının zaferlerinden biridir, binanın neredeyse tamamen dikey ve yatay yüzeylerine heykelsi bir tezat oluşturuyor. 
+       Arne Jacobsen, Egg Chair'i 1958 yılında Kopenhag'daki SAS Royal Hotel'in lobi ve resepsiyon alanları için tasarladı. Otel binasının mobilya da dahil olmak üzere her unsurunu tasarladı. Egg chair, Jacobsen’ın tüm tasarımının zaferlerinden biridir, binanın neredeyse tamamen dikey ve yatay yüzeylerine heykelsi bir tezat oluşturuyor. 
      <br><br>   Jacobsen, Yumurta Sandalyesini döşemenin altındaki güçlü bir köpük iç kabuktan kalıpladı. Bir heykeltıraş gibi, garajında kil ile deney yaparak kabuğun mükemmel şeklini bulmaya çalıştı. Sonuç, kullanıcıyı çevreleyen kamusal alanlarda gizlilik sağlayan benzersiz bir şekildir.
         </p>
     </div>
