--- a/content/dergi/sayi-3-kitchenaid.html
+++ b/content/dergi/sayi-3-kitchenaid.html
@@ -38,9 +38,7 @@ tags= [
         KitchenAid mikserinin ilk iterasyonu endüstriyel bir makineye
         benziyordu. Çoğunlukla kadın bir satış ekibi tarafından kapıdan kapıya
         satıldı. <em>(görünüşe göre güçlü kolları olan kadınlar)</em>. 65
-        kiloluk Model H, dikey olarak-<em
-          >motoru karıştırma kabının üzerinde-</em
-        >istiflenmişti. Bu devasa <em>(yaklaşık 80 lt)</em> ticari miksere
+        kiloluk Model-H'ın motoru karıştırma kabının üzerine dikey olarak yerleştirilmişti. Bu devasa <em>(yaklaşık 80 lt)</em> ticari miksere
         Hobart adı verildi. I.Dünya Savaşı sırasında ABD Donanması savaş
         gemilerinde kullanıldı.
       </p>
