--- a/content/dergi/sayi-4-muzik-aletleri.html
+++ b/content/dergi/sayi-4-muzik-aletleri.html
@@ -70,7 +70,7 @@ tags= [
 <h2 class="text-center"><em><strong>Şimdi reklamlar...</strong></em> </h2>
 <div class="text-center">
 <iframe
-    width="560"
+    width="100%"
     height="315"
     src="https://www.youtube.com/embed/zDwW0SJrp6A"
     frameborder="0"
@@ -81,7 +81,7 @@ tags= [
 <div class="text-center">
   <h2>Audio Technica Sound Burger</h2>
 <iframe
-    width="560"
+    width="100%"
     height="315"
     src="https://www.youtube.com/embed/zpukXRm0Dxk"
     frameborder="0"
@@ -158,7 +158,7 @@ tags= [
 <div class="text-center">
 <h2>Şimdi reklamlar...</h2>
 <iframe
-    width="560"
+    width="100%"
     height="315"
     src="https://www.youtube.com/embed/MTs5pOn7XFU"
     frameborder="0"
