--- a/content/dergi/sayi-4-ergonomi.html
+++ b/content/dergi/sayi-4-ergonomi.html
@@ -186,7 +186,7 @@ tags= [
 <br><br><br>
 <div class="text-center"><p style="color: #060ac9; "><em>Markut Ekibinin önerisiyle:</em></p>
     <iframe
-        width="560"
+        width="100%"
         height="315"
         src="https://www.youtube.com/embed/LAKlmdMHpdE"
         frameborder="0"
