--- a/content/dergi/sayi-4-kontrplak.html
+++ b/content/dergi/sayi-4-kontrplak.html
@@ -119,7 +119,7 @@ tags= [
     <div class="col-md-5"><p>Don Café'de yapılan çalışmalar ve araştırmalar sayesinde Inarch, modern bir görüntü vererek onu diğer geleneksel kahve barlarından ayırması beklenen benzersiz bir kavramsal ve görsel konsept ortaya çıkardı. Tasarım için fikir/ilham, kahve taneleri ile doldurulmuş çuvaldan kaynaklanmaktadır. Barın duvarları organik olarak şekillendirilmiş ve “Kontrplak” tip ahşaptan yapılmış kahve çuvalına benzer şekilde renklendirilmiştir, bu arada aradaki sütunlar tekstil kahve çuvalları ile kaplanmıştır. Masalar ve avizeler, bir kahve çuvalının içinde kalma izlenimi yaratmak için asimetrik olarak listelenen kahve taneleri gibidir.</p>
         <p>Proje uygulaması esas olarak 2 cm ve 4 cm kalınlığında kontrplak ile yapılır. Öngörülen organik formu elde etmek için, kontrplak CNC makine ile parça parça kesilir ve birlikte monte edilir. Kontrplakların her biri ayrı ayrı tasarlanmıştır. Tüm bina birlikte tasarlanan, kesilen ve monte edilen 1365 parçadan oluşmuştur.</p>
         </div>
-    <div class="col-md-7"><img src="/img/charles-ray-eames.jpg" alt=""></div>
+    <div class="col-md-7"><img src="/img/don-cafe-house-innarch.jpg" alt=""></div>
 </div>
 
 <hr>
