--- a/content/dergi/sayi-4-muzik-aletleri.html
+++ b/content/dergi/sayi-4-muzik-aletleri.html
@@ -187,7 +187,7 @@ tags= [
 <div class="row">
     <div class="col-md-6">
         <iframe src="https://open.spotify.com/embed?uri=spotify%3Aplaylist%3A0cetO8Wv2OKtWJz2omJJ8X" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-        <p><a href="https://open.spotify.com/playlist/0cetO8Wv2OKtWJz2omJJ8X" target="_blank">https://open.spotify.com/playlist/0cetO8Wv2OKtWJz2omJJ8X</a></p>
+        <p><a href="https://open.spotify.com/playlist/0cetO8Wv2OKtWJz2omJJ8X" target="_blank">Spotify Markut Müzik listesi</a></p>
     </div>
     <div class="col-md-6"><img src="/img/o-zaman-dans-uykusuz.jpg" alt=""></div>
 </div>
