alises, recaptcha, 3d yazici gorsel

--- a/content/dergi/sayi-4-3d-yazici.html
+++ b/content/dergi/sayi-4-3d-yazici.html
@@ -1,6 +1,9 @@
 +++
 title = "3 Boyutlu Yazıcılar ve Endüstriyel Tasarım"
-url = "sayi-4/3-boyutlu-yazicilar-endustriyel-tasarım/"
+url = "sayi-4/3-boyutlu-yazicilar-endustriyel-tasarim/"
+aliases = [
+    "/sayi-4/3-boyutlu-yazicilar-endustriyel-tasarım/"
+]
 date = "2020-12-01"
 seotitle = "3 Boyutlu Yazıcılar ve Endüstriyel Tasarım"
 description=""
@@ -139,8 +142,9 @@ tags= [
 <p></p>
 <p></p>
 </div>
-<div class="container-fluid">
+<div class="container-fluid text-center">
 <img src="/img/Additive-Manufacturing-Infographic-3DHubs.original.jpg" alt="">
+<img src="/img/design-rules-for-3d-printing.jpg" alt="">
 </div>
 <div class="container">
 <p style="color: #9B9A97; ">Bu tablolarda tüm makine türlerine ve tek tek tüm makinelerdeki tasarım kısıtlarına ve sağlarlıklarına yer verilmiştir. <a href="https://www.3dhubs.com/guides/3d-printing/#design-for-3d-printing" target="_blank">İnternet sitelerinde</a> daha detaylı bilgi bulunmaktadır.</p>
