--- a/content/dergi/sayi-4-bauhaus-turkiye.html
+++ b/content/dergi/sayi-4-bauhaus-turkiye.html
@@ -1,11 +1,14 @@
 +++
 title = "Türkiye'den Bauhaus Çıkar mı?"
-url = "sayi-4/turkiye-den-bauhaus-cikar-mi/"
+url = "sayi-4/turkiyeden-bauhaus-cikar-mi/"
+aliases = [
+    "/sayi-4/turkiye-den-bauhaus-cikar-mi/"
+]
 date = "2020-12-01"
 seotitle = "Türkiye'den Bauhaus Çıkar mı?"
 description=""
-aciklama="Üretim anlamında; (endüstriyel ürün, mimari, fikir, yazı, resim, müzik...) sanayi, tasarım ve sosyolojik etmenlerin birbirlerine ne kadar bağlı olduğunu görebiliriz. İç ortam ve dış ortam koşullarını hızlıca değerlendirip gerekirse dış ortamdan bağımsız olarak her koşulda ilerlemeye çalışmak zorundayız. Önceden olduğu gibi, ülkemizde yine fikri üretimler olacaktır. İşte bu sefer başarılı olacağına inanıyorum. İnanmak da zorundayız..."
-thumb="/img/"
+aciklama="Kısa dönemde tasarım dünyasını etkisini alan Bauhaus'un, tüm dünyada olduğu gibi Türkiye'de de etkilerini görmek mümkün. Nazilerin Almanya'da iktidara gelmesiyle birlikte ülkesini terk etmek zorunda kalan Alman öğretmenler, Türkiye'de eğitime önemli katkılarda bulundular. Peki Türkiye'de böyle bir hareket mümkün mü? Olabilir mi?"
+thumb="/img/bauhaus-turkiye-thumbnail.jpg"
 sayi=[
 "04"
 ]
