--- a/content/dergi/sayi-4-ergonomi.html
+++ b/content/dergi/sayi-4-ergonomi.html
@@ -1,6 +1,9 @@
 +++
 title = "Tasarım Sözlüğü: Ergonomi"
-url = "sayi-4/tasarımda-ergonomi-nedir/"
+url = "sayi-4/tasarimda-ergonomi-nedir/"
+aliases = [
+    "/sayi-4/tasarımda-ergonomi-nedir/"
+]
 date = "2020-12-01"
 seotitle = "Tasarımda Ergonomi Nedir?"
 description=""
