--- a/content/dergi/sayi-2-ikonik-masa-lamba.html
+++ b/content/dergi/sayi-2-ikonik-masa-lamba.html
@@ -173,7 +173,7 @@ tags= [
         yaylı Anglepoise lambası piyasaya sürüldü. Anglepoise tasarımının ve
         patentinin önemli bir özelliği, tüm yayların (üç veya dört) tabana yakın
         yerleştirilmesidir. Tasarım, diğer şirketler tarafından, genellikle
-        basitleştirilmiş ama1 kapsamlı bir şekilde kopyalandı ve halen
+        basitleştirilmiş ama kapsamlı bir şekilde kopyalandı ve halen
         kullanılıyor.
       </p>
       <p>
@@ -183,7 +183,7 @@ tags= [
         bombardıman uçakları için Anglepoise lambaları üretmeye başladı.
         Anglepoise web sitesine göre, bunlar o kadar iyi üretildi ki,
         1985&#39;te İskoçya&#39;daki Loch Ness&#39;ten düşen bir Vickers
-        Wellington bombardıman uçağı kurtarıldığında , lamba yaklaşık kırk
+        Wellington bombardıman uçağı kurtarıldığında, lamba yaklaşık kırk
         yıldır suya batırılmış olmasına rağmen yeni bir pil verildikten sonra
         hala çalışıyordu.
       </p>
