--- a/content/dergi/sayi-4-bauhaus-turkiye.html
+++ b/content/dergi/sayi-4-bauhaus-turkiye.html
@@ -16,7 +16,7 @@ sayfa="02"
 yazar=["atahan gokturk"]
 type="sayfa"
 tags= [
-"anasayfa", "dergi"
+"anasayfa", "dergi", "bauhaus"
 ]
 +++
 <div class="container">
