--- a/content/dergi/sayi-4-ergonomi.html
+++ b/content/dergi/sayi-4-ergonomi.html
@@ -16,7 +16,7 @@ sayfa="08"
 yazar=["goksu gokturk"]
 type="sayfa"
 tags= [
-"anasayfa", "dergi"
+"anasayfa", "dergi", "ergonomi", "tasarim sozlugu"
 ]
 +++
 
