--- a/content/dergi/sayi-4-muzik-aletleri.html
+++ b/content/dergi/sayi-4-muzik-aletleri.html
@@ -13,7 +13,7 @@ sayfa="05"
 yazar=["zeynep dag"]
 type="sayfa"
 tags= [
-"anasayfa", "dergi"
+"anasayfa", "dergi", "ikonik"
 ]
 +++
 <div class="text-center">
