--- a/content/dergi/sayi-4-3d-yazici.html
+++ b/content/dergi/sayi-4-3d-yazici.html
@@ -16,7 +16,7 @@ sayfa="07"
 yazar=["hilal doruk"]
 type="sayfa"
 tags= [
-"anasayfa", "dergi"
+"anasayfa", "dergi", "3d Baski"
 ]
 +++
 <div class="text-center">
