--- a/content/dergi/sayi-4-sumerbank.html
+++ b/content/dergi/sayi-4-sumerbank.html
@@ -13,7 +13,7 @@ sayfa="01"
 yazar=["zeynep yarar"]
 type="sayfa"
 tags= [
-"anasayfa", "dergi", "sümerbank"
+"anasayfa", "dergi", "sumerbank"
 ]
 +++
 
