kaynaklar, dark mode icon, Harfler...

--- a/content/dergi/sayi-0-donal-dnorman.html
+++ b/content/dergi/sayi-0-donal-dnorman.html
@@ -19,8 +19,8 @@ tags= [
   "dergi"
 ]
 +++
-
-<img class="img-fluid" src="/img/Zachary_Monteiro_Don_Norman_UX.jpg" alt="">
+<div class="text-center">
+<img class="img-fluid" src="/img/Zachary_Monteiro_Don_Norman_UX.jpg" alt=""></div>
 <div class="container">
 <div class="row">
     <div class="col-md-8 ">
@@ -72,5 +72,29 @@ Doğal haritalandırma <b>mantıksal kısıtlayıcılar</b> sağlanarak çalış
        Trafik ışıklarının yanma sırası her zaman aynıdır.
     </div>  
 </div><br><br><br>
-<small>Yazı Kaynağı; Norman, Donald Arthur. (2002). The Design of Everyday Things. New York: Basic Books. </small>
+
+<button
+class="btn markutbtn mt-4"
+data-target="#my-collapse"
+data-toggle="collapse"
+aria-expanded="false"
+aria-controls="my-collapse"
+>
+Kaynaklar
+</button>
+<div id="my-collapse" class="collapse">
+<pre> <small><code>  
+Yazı: Norman, Donald Arthur. (2002). The Design of Everyday Things. New York: Basic Books.
+
+  Görseller:
+
+İllustrasyon: Zachary Monteiro 
+http://www.zacharymonteiro.com/2019/1/22/don-norman-portrait
+
+https://humancomputerblog.com/
+http://blogs.wisetechlabs.com/how-to/how-to-disable-or-enable-usb-ports-on-windows-10
+https://commons.wikimedia.org/wiki/File:Traffic_lights_3_states.svg
+https://www.shutterstock.com/image-photo/emergency-exit-door-170373032
+  </code></small></pre>
+</div>
 </div>
