--- a/content/dergi/sayi-0-ekoloji.html
+++ b/content/dergi/sayi-0-ekoloji.html
@@ -14,8 +14,8 @@ tags= [
 "ekoloji", "surdurulebilir tasarim", "dergi"
 ]
 +++
-
-<img class="img-fluid" src="/img/peel-saver-packaging.jpg" alt="">
+<div class="text-center">
+<img class="img-fluid" src="/img/peel-saver-packaging.jpg" alt=""></div>
 <div class="container">
 <h2>Ekoloji nedir, neden önemlidir?</h2>
 <div class="row">
