--- a/content/dergi/sayi-0-tasarimsozlugu.html
+++ b/content/dergi/sayi-0-tasarimsozlugu.html
@@ -34,4 +34,20 @@ tags= [
          <br> Çevremizde ikon olmak sözcüğü kullanımını zaman içinde yanlış kullanım yerlerinden dolayı manasını yitirip basit hale getirilse de İkon denildiğinde akla gelen bazı sanatçılar, yapılar, ürünler sayılı olmakla birlikte ortak değer olarak da görülmektedir.      
         </div>
     </div>
+    <button
+    class="btn markutbtn mt-4"
+    data-target="#my-collapse"
+    data-toggle="collapse"
+    aria-expanded="false"
+    aria-controls="my-collapse"
+    >
+    Kaynaklar
+    </button>
+    <div id="my-collapse" class="collapse">
+    <pre> <small><code>  
+        Sanat Kavram ve Terimleri Sözlüğü. Metin Sözen, Uğur Tanyeli. Remzi Kitapevi. İstanbul. 1986. s.111
+
+       https://www.sanatinyolculugu.com/ikona-nedir/
+      </code></small></pre>
+    </div>
 </div>
