--- a/content/dergi/sayi-2-biyomimikri.html
+++ b/content/dergi/sayi-2-biyomimikri.html
@@ -224,4 +224,91 @@ tags= [
     başlangıç noktası olabilir; ancak doğanın sorunlarımızı bizim için çoktan
     çözdüğünü düşünerek hata yapmayalım.
   </p>
+
+
+  <button
+  class="btn markutbtn mt-3"
+  data-target="#my-collapse"
+  data-toggle="collapse"
+  aria-expanded="false"
+  aria-controls="my-collapse"
+  >
+  Kaynaklar
+  </button>
+  <div id="my-collapse" class="collapse">
+  <pre> <small><code>  
+   https://biomimicry.org/
+  
+   https://toolbox.biomimicry.org/introduction/
+  
+   https://biomimicry.org/solutions/
+  
+   https://biomimicry.org/biomimicry-examples/
+  
+   https://biomimicry.org/solutions/
+  
+   https://biomimicry.org/biomimicry-101-nature-the-college-freshman-part-1/
+  
+   https://biomimicry.org/the-future-of-innovation-is-here-8-inventions-from-natures-laboratory/
+  
+   https://biomimicry.net/the-buzz/resources/designlens-essential-elements/
+  
+   https://biomimicry.net/
+  
+   https://biomimicry.net/what-is-biomimicry/
+  
+   https://synapse.bio/blog//biomimicrysolutionsreport-carbon
+  
+   https://openaccess.iyte.edu.tr/xmlui/bitstream/handle/11147/7412/T001961.pdf?sequence=1&isAllowed=y
+  
+   https://www.researchgate.net/publication/289595026_Biomimicry_-_A_useful_tool_for_the_industrial_designer_Shedding_light_on_nature_as_a_source_of_inspiration_in_industrial_design
+  
+   https://www.researchgate.net/publication/254458141_On_the_use_of_Biomimicry_as_a_Useful_Tool_for_the_Industrial_Designer
+  
+   https://www.industryweek.com/innovation/media-gallery/21964966/nature-rules-10-biomimicry-projects-that-are-changing-product-design
+  
+   https://www.industryweek.com/innovation/article/21964965/biomimicry-what-would-nature-do
+  
+   https://www.semanticscholar.org/paper/Biomimicry-–-a-useful-tool-for-the-industrial-Volstad-Boks/5b91c1bed9b9f93daea841f64d0022ad28681f32
+  
+   https://bioinspired.sinet.ca/content/biomimicry-and-industrial-design-karen-verbeek
+  
+   https://www.tandfonline.com/doi/abs/10.1080/00207543.2020.1778206?journalCode=tprs20
+  
+   https://medium.com/@tubacakir/biyomimikri-sürdürülebilir-bir-dünya-zaten-var-3724e855f0aa
+  
+   https://www.bloomberg.com/news/photo-essays/2015-02-23/14-smart-inventions-inspired-by-nature-biomimicry
+  
+   http://greenworldrising.org/
+  
+   https://en.wikipedia.org/wiki/Biomimetics
+  
+   https://www.domusweb.it/en/architecture/2009/08/31/sustainable-mobility-1-think-more-move-less.html
+  
+   https://library.acropolis.org/biomimicry-human-creation-inspired-by-nature/
+  
+   https://theconversation.com/simply-copying-nature-is-no-way-to-succeed-at-inventing-just-ask-leonardo-da-vinci-27403
+  
+   https://leonard.vinci.com/en/biomimetics-and-the-power-of-nature/
+  
+   https://blog.interface.com/factory-forest-reimagining-facilities-ecosystems/
+  
+   https://ourworld.unu.edu/en/biomimicry-emulating-natures-genius#:~:text=Biomimicry thinking&text=This means viewing and valuing,to solve human problems — sustainably.
+  
+   https://www.sciencefocus.com/future-technology/biomimetic-design-10-examples-of-nature-inspiring-technology/
+  
+   https://bioinspired.sinet.ca/content/are-ethos-and-reconnect-essential-biomimicry-philip-ling-danielle-davelaar-draft
+  
+   https://www.industryweek.com/innovation/article/21964965/biomimicry-what-would-nature-do
+  
+   https://www.industryweek.com/innovation/media-gallery/21964966/nature-rules-10-biomimicry-projects-that-are-changing-product-design
+  
+   https://www.dogadergisi.com/biyomimikri-dogadan-gelen-tasarimlar/
+  
+   https://www.yesilodak.com/biyomimikri-nedir
+  
+   https://acikders.ankara.edu.tr/pluginfile.php/12364/mod_resource/content/1/9. Temel Tasarım 6.pdf
+    
+    </code></small></pre>
+  </div>
 </div>
