--- a/content/dergi/sayi-2-tipografi-tasarim-sozlugu.html
+++ b/content/dergi/sayi-2-tipografi-tasarim-sozlugu.html
@@ -175,4 +175,26 @@ tags= [
     Yazının karakteri, verilmek istenen mesajın önüne geçmeden mesajın okuyucuya
     doğruca aktarılması sağlanmalıdır.
   </p>
+
+  <button
+  class="btn markutbtn mt-4"
+  data-target="#my-collapse"
+  data-toggle="collapse"
+  aria-expanded="false"
+  aria-controls="my-collapse"
+  >
+  Kaynaklar
+  </button>
+  <div id="my-collapse" class="collapse">
+  <pre> <small><code>  
+    https://www.fontfabric.com/blog/history-and-evolution-of-typography-fonts-timeline/
+
+    https://en.wikipedia.org/wiki/History_of_Western_typography
+    
+    https://practicaltypography.com/what-is-typography.html
+    
+    https://edu.gcfglobal.org/en/beginning-graphic-design/typography/1/
+    </code></small></pre>
+  </div>
+
 </div>
