--- a/content/dergi/sayi-3-iskandinav.html
+++ b/content/dergi/sayi-3-iskandinav.html
@@ -230,4 +230,29 @@ tags= [
       <img src="" alt="" />
     </div>
   </div>
+
+
+  <button
+  class="btn markutbtn"
+  data-target="#my-collapse"
+  data-toggle="collapse"
+  aria-expanded="false"
+  aria-controls="my-collapse"
+>
+  Kaynaklar
+</button>
+<div id="my-collapse" class="collapse">
+  <pre> <small><code>  
+https://en.wikipedia.org/wiki/Hans_Wegner
+
+https://en.wikipedia.org/wiki/Panton_Chair
+
+https://www.wallpaper.com/design/eero-aarnio-at-85-designer-profile#0_pic_15
+
+https://studiodesignistanbul.wordpress.com/2011/12/26/iskandinav-tasarimi/
+
+https://en.wikipedia.org/wiki/Eero_Aarnio
+      </code></small></pre>
+</div>
+
 </div>
