--- a/content/dergi/sayi-4-ergonomi.html
+++ b/content/dergi/sayi-4-ergonomi.html
@@ -198,7 +198,7 @@ tags= [
       ></iframe></div>
 
       <button
-      class="btn markutbtn"
+      class="btn markutbtn mt-3"
       data-target="#my-collapse"
       data-toggle="collapse"
       aria-expanded="false"
@@ -208,6 +208,9 @@ tags= [
       </button>
       <div id="my-collapse" class="collapse">
       <pre> <small><code>  
+
+        El ve Araç İlişkisine Ergonomik Yaklaşım, Mehmet Alay, Yüksek Lisans Tezi, Eskişehir 1989, s.6, s.7, s.15, s.21
+
         https://iea.cc/what-is-ergonomics/ Uluslarası Ergonomi Derneği
 
         http://sanalosgb.blogspot.com/2017/08/ergonomi-konu-ozetleri.html
